@startuml Class_Diagram_Increment_2

title Diagram Kelas — Increment 2: Modul Pendukung Operasional\nSistem Manajemen Bisnis Pawon3D\n(Menampilkan kelas baru dan kelas yang diperbarui dari Increment 1)

skinparam classBackgroundColor White
skinparam classBorderColor DarkSlateGray
skinparam classArrowColor DarkSlateGray
skinparam packageBackgroundColor AliceBlue

note as N1
  Kelas yang sudah ada pada Increment 1
  ditampilkan kembali dengan relasi baru.
  Kelas baru Increment 2 ditandai khusus.
end note

' ==================== KELAS LAMA YANG MEMILIKI RELASI BARU ====================

package "Autentikasi (diperbaharui)" {
  class User {
    +id: UUID
    +name: string
    +email: string
    +phone: string
    +password: string
    +image: string
    +gender: string
    +is_active: boolean
    +invitation_token: string
    +invitation_sent_at: timestamp
    +activated_at: timestamp
    --
    +roles(): BelongsToMany
    +shifts(): HasMany
    +transactions(): HasMany
    +notifications(): HasMany
    +hitungs(): HasMany
    +inventoryLogs(): HasMany
  }

  class SpatieRole <<Spatie Permission>> {
    +id: BIGINT
    +name: string
    +guard_name: string
    +max_users: integer
    --
    +permissions(): BelongsToMany
    +users(): BelongsToMany
  }

  class SpatiePermission <<Spatie Permission>> {
    +id: BIGINT
    +name: string
    +guard_name: string
    --
    +roles(): BelongsToMany
  }
}

package "Pengaturan Sistem (baru)" {
  class StoreProfile <<NEW - Increment 2>> {
    +id: UUID
    +logo: string
    +name: string
    +tagline: string
    +type: string
    +banner: string
    +product: string
    +description: text
    +building: string
    +location: string
    +address: string
    +contact: string
    +email: string
    +website: string
    +is_senin: boolean
    +open_senin: time
    +close_senin: time
    +is_selasa: boolean
    +open_selasa: time
    +close_selasa: time
    +is_rabu: boolean
    +open_rabu: time
    +close_rabu: time
    +is_kamis: boolean
    +open_kamis: time
    +close_kamis: time
    +is_jumat: boolean
    +open_jumat: time
    +close_jumat: time
    +is_sabtu: boolean
    +open_sabtu: time
    +close_sabtu: time
    +is_minggu: boolean
    +open_minggu: time
    +close_minggu: time
    +social_instagram: string
    +social_facebook: string
    +social_whatsapp: string
  }

  class StoreDocument <<NEW - Increment 2>> {
    +id: UUID
    +document_name: string
    +document_number: string
    +document_file: string
    +valid_from: date
    +valid_until: date
  }

  class PaymentChannel <<NEW - Increment 2>> {
    +id: UUID
    +type: string
    +group: string
    +bank_name: string
    +account_number: string
    +account_name: string
    +qris_image: string
    +is_active: boolean
    --
    +payments(): HasMany
    +refunds(): HasMany
  }
}

package "Penjualan (diperbaharui)" {
  class Customer {
    +id: UUID
    +phone: string
    +name: string
    +points: decimal
    --
    +transactions(): HasMany
    +pointsHistories(): HasMany
  }

  class Transaction {
    +id: UUID
    +user_id: UUID
    +customer_id: UUID
    +invoice_number: string
    +name: string
    +phone: string
    +date: date
    +time: time
    +payment_status: string
    +status: string
    +method: string
    +total_amount: decimal
    +points_used: integer
    +points_discount: decimal
    +total_refund: decimal
    +cancel_reason: string
    +created_by_shift: UUID
    +refund_by_shift: UUID
    +cancelled_by_shift: UUID
    --
    +payments(): HasMany
    +refunds(): HasMany
    +pointsHistories(): HasMany
  }

  class Payment <<NEW - Increment 2>> {
    +id: UUID
    +receipt_number: string
    +transaction_id: UUID
    +payment_channel_id: UUID
    +payment_method: string
    +payment_group: string
    +paid_amount: decimal
    +image: string
    +paid_at: timestamp
    --
    +transaction(): BelongsTo
    +paymentChannel(): BelongsTo
  }

  class Refund <<NEW - Increment 2>> {
    +id: UUID
    +transaction_id: UUID
    +reason: text
    +proof_image: string
    +refund_method: string
    +payment_channel_id: UUID
    +account_number: string
    +total_amount: decimal
    +refund_by_shift: UUID
    +refunded_at: datetime
    --
    +transaction(): BelongsTo
    +paymentChannel(): BelongsTo
    +refundByShift(): BelongsTo
  }

  class PointsHistory <<NEW - Increment 2>> {
    +id: UUID
    +phone: string
    +action_id: string
    +action: string
    +points: integer
    +transaction_id: UUID
    +image: string
    --
    +customer(): BelongsTo
    +transaction(): BelongsTo
  }
}

package "Inventori (diperbaharui)" {
  class InventoryLog <<NEW - Increment 2>> {
    +id: UUID
    +material_id: UUID
    +material_batch_id: UUID
    +user_id: UUID
    +action: string
    +quantity_change: decimal
    +quantity_after: decimal
    +reference_type: string
    +reference_id: string
    +note: text
    --
    +material(): BelongsTo
    +materialBatch(): BelongsTo
    +user(): BelongsTo
  }

  class Hitung <<NEW - Increment 2>> {
    +id: UUID
    +user_id: UUID
    +hitung_number: string
    +action: string
    +note: text
    +status: string
    +hitung_date: date
    +hitung_date_finish: date
    +is_start: boolean
    +is_finish: boolean
    +grand_total: decimal
    +loss_grand_total: decimal
    --
    +user(): BelongsTo
    +hitungDetails(): HasMany
  }

  class HitungDetail <<NEW - Increment 2>> {
    +id: UUID
    +hitung_id: UUID
    +material_id: UUID
    +material_batch_id: UUID
    +quantity_expect: decimal
    +quantity_actual: decimal
    +total: decimal
    +loss_total: decimal
    --
    +hitung(): BelongsTo
    +material(): BelongsTo
    +materialBatch(): BelongsTo
  }
}

' ==================== RELATIONS ====================

User "1" -- "0..*" SpatieRole : memiliki peran >
SpatieRole "0..*" -- "0..*" SpatiePermission : memiliki permission >
SpatieRole "1" -- "0..*" User : dimiliki oleh >

Transaction "1" -- "0..*" Payment : dibayar dengan >
Transaction "1" -- "0..1" Refund : di-refund >
Transaction "1" -- "0..*" PointsHistory : menghasilkan poin >

Customer "1" -- "0..*" PointsHistory : memiliki riwayat >
PaymentChannel "1" -- "0..*" Payment : digunakan di >
PaymentChannel "1" -- "0..*" Refund : digunakan di >

User "1" -- "0..*" Hitung : melaksanakan >
User "1" -- "0..*" InventoryLog : mencatat >
Hitung "1" -- "0..*" HitungDetail : memiliki detail >

@enduml
